@@ -39,6 +39,7 @@
     <string name="omitbackup_key">omitbackup</string>    
     <string name="list_size_key">list_size</string>
     <string name="sort_key">sort_key</string>
+    <string name="timeout_key">timeout_key</string>
     <bool name="maskpass_default">true</bool>
     <bool name="keyfile_default">true</bool>
     <bool name="sort_default">true</bool>
