@@ -1,5 +1,5 @@
 /*
- * Copyright 2009 Brian Pellin.
+ * Copyright 2012 Brian Pellin.
  *     
  * This file is part of KeePassDroid.
  *
@@ -21,24 +21,20 @@ package com.keepassdroid;
 
 import android.app.ListActivity;
 
-import com.keepassdroid.app.App;
-import com.keepassdroid.timers.Timeout;
+import com.keepassdroid.timeout.TimeoutHelper;
 
 public class LockingListActivity extends ListActivity {
 	@Override
 	protected void onPause() {
 		super.onPause();
-		if ( App.getDB().Loaded() ) {
-			Timeout.start(this);
-		}
+		
+		TimeoutHelper.pause(this);
 	}
 
 	@Override
 	protected void onResume() {
 		super.onResume();
 
-		if ( App.getDB().Loaded() ) {
-			Timeout.cancel(this);
-		}
+		TimeoutHelper.resume(this);
 	}
 }
