@@ -19,8 +19,6 @@
  */package com.keepassdroid.intents;
 
 public class Intents {
-	public static final String TIMEOUT = "com.keepassdroid.timeout";
-	
 	public static final String COPY_USERNAME = "com.keepassdroid.copy_username";
 	public static final String COPY_PASSWORD = "com.keepassdroid.copy_password";
 
